{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "d169f935-c9c7-cc16-fd9e-e2351af1f238",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "python_app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0142f42c24e3dba8a",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0dd1fe0a8a2761156",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0dd1fe0a8a2761156",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shireen-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b30534d27b1ea90c",
            "private_dns": "ip-10-0-0-252.eu-west-1.compute.internal",
            "private_ip": "10.0.0.252",
            "public_ip": "34.249.231.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b2ba80176f33e9d2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0766574625cfc0c51",
            "tags": {
              "Name": "Eng48-shireen-python-app - instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fc1d85e7d04f9705"
            ]
          },
          "dependencies": [
            "aws_security_group.python_app_sg",
            "aws_subnet.python_app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "python_app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bba4bddaf2dda99d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-shireen-python-app - igw"
            },
            "vpc_id": "vpc-00d7b5553f6866a02"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "python_app_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00da8302b2797a5e4",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bba4bddaf2dda99d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-shireen-python-app - route"
            },
            "vpc_id": "vpc-00d7b5553f6866a02"
          },
          "dependencies": [
            "aws_internet_gateway.python_app_gw",
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "python_app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e736a9502c7ee4aa",
            "route_table_id": "rtb-00da8302b2797a5e4",
            "subnet_id": "subnet-0766574625cfc0c51"
          },
          "dependencies": [
            "aws_internet_gateway.python_app_gw",
            "aws_route_table.python_app_rt",
            "aws_subnet.python_app_subnet",
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "python_app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0fc1d85e7d04f9705",
            "description": "Allow inbound traffic on port 22 on Sparta IP and home IP",
            "egress": [],
            "id": "sg-0fc1d85e7d04f9705",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.161.55.68/32",
                  "95.147.223.154/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng48-shireen-python-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-shireen-python-app - sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d7b5553f6866a02"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "python_app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0766574625cfc0c51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0766574625cfc0c51",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-shireen-python-app - subnet"
            },
            "vpc_id": "vpc-00d7b5553f6866a02"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "python_app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-00d7b5553f6866a02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cfa03fb647c999aa",
            "default_route_table_id": "rtb-05c245e14105ae64b",
            "default_security_group_id": "sg-00c372ac286001d1a",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00d7b5553f6866a02",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c245e14105ae64b",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-shireen-python-app - VPC"
            }
          }
        }
      ]
    }
  ]
}